퍼블릭용 커밋

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <div id="root"></div>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=de3897fba8c2daa1b00a02f3634f62a9"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey='APP_KEY"
     ></script>
     <!--
       This HTML file is a template.
